--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "axios": "^1.8.4",
+    "cors": "^2.8.5",
     "mongoose": "^8.13.2",
     "next": "15.3.1",
     "react": "^19.0.0",
