--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "axios": "^1.8.4",
     "cors": "^2.8.5",
     "mongoose": "^8.13.2",
-    "next": "15.3.1",
+    "next": "^15.3.1",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
